4.M3ExploratoryDataAnalysis-lab-Barry.ipynb

--- a/4.M3ExploratoryDataAnalysis-lab-Barry.ipynb
+++ b/4.M3ExploratoryDataAnalysis-lab-Barry.ipynb
@@ -177,7 +177,8 @@
     }
    ],
    "source": [
-    "sns.displot(df['ConvertedComp'], kind=\"kde\", height=3, aspect = 3)"
+    "sns.kdeplot(df['ConvertedComp'])
+plt.show())"
    ]
   },
   {
